--- a/client/views/events.ng.html
+++ b/client/views/events.ng.html
@@ -1,46 +1,6 @@
-<div class="events-content clearfix" data-event-content>
+<div class="events-content clearfix content-page" data-event-content>
     <div class="list scrollme" data-ng-scrollbar is-bar-shown="barShown">
         <article>
-            <div class="date">
-                25-10
-                <div class="year">2015</div>
-            </div>
-            <h3><a href="#">На Івано-Франківщині триває Bereziv Bander Fest (Відео)</a></h3>
-            <div class="text">
-                <img src="" alt=""> З 17 по 19 липня у Вижньому Березові, Косівського району, Івано-Франківської області відбувається фестиваль “Bereziv Bander Fest”. Його метою є збереження та популяризація української пісні в різних жанрах, а також виховання молоді в патріотичному дусі. Всі виручені кошти будуть передані ДУК ПС на передову.
-            </div>
-        </article>
-                <article>
-            <div class="date">
-                25-10
-                <div class="year">2015</div>
-            </div>
-            <h3><a href="#">На Івано-Франківщині триває Bereziv Bander Fest (Відео)</a></h3>
-            <div class="text">
-                <img src="" alt=""> З 17 по 19 липня у Вижньому Березові, Косівського району, Івано-Франківської області відбувається фестиваль “Bereziv Bander Fest”. Його метою є збереження та популяризація української пісні в різних жанрах, а також виховання молоді в патріотичному дусі. Всі виручені кошти будуть передані ДУК ПС на передову.
-            </div>
-        </article>
-                <article>
-            <div class="date">
-                25-10
-                <div class="year">2015</div>
-            </div>
-            <h3><a href="#">На Івано-Франківщині триває Bereziv Bander Fest (Відео)</a></h3>
-            <div class="text">
-                <img src="" alt=""> З 17 по 19 липня у Вижньому Березові, Косівського району, Івано-Франківської області відбувається фестиваль “Bereziv Bander Fest”. Його метою є збереження та популяризація української пісні в різних жанрах, а також виховання молоді в патріотичному дусі. Всі виручені кошти будуть передані ДУК ПС на передову.
-            </div>
-        </article>
-                <article>
-            <div class="date">
-                25-10
-                <div class="year">2015</div>
-            </div>
-            <h3><a href="#">На Івано-Франківщині триває Bereziv Bander Fest (Відео)</a></h3>
-            <div class="text">
-                <img src="" alt=""> З 17 по 19 липня у Вижньому Березові, Косівського району, Івано-Франківської області відбувається фестиваль “Bereziv Bander Fest”. Його метою є збереження та популяризація української пісні в різних жанрах, а також виховання молоді в патріотичному дусі. Всі виручені кошти будуть передані ДУК ПС на передову.
-            </div>
-        </article>
-                <article>
             <div class="date">
                 25-10
                 <div class="year">2015</div>
