--- a/client/views/infrastruktura.ng.html
+++ b/client/views/infrastruktura.ng.html
@@ -1,3 +1,7 @@
-<div class="greeting">
-    infrastruktura page
+<div class="infrastruktura content-page">
+    <h3>Позначення</h3>
+    <ul>
+        <li>Велодоріжки</li>
+        <li>Велопарковки</li>
+    </ul>
 </div>
