--- a/client/views/routes.ng.html
+++ b/client/views/routes.ng.html
@@ -1,4 +1,4 @@
-<div class="routes-nav">
+<div class="routes-nav content-page">
     <h2>Маршрути</h2>
     <ul>
         <li data-ng-click="loadRoute('p1')">
@@ -9,12 +9,12 @@
             Сімені
         </li>
         <li>
-
+            {{ title }}
         </li>
     </ul>
 </div>
 
 <div class="about-route">
-    {{ test }}
+
 
 </div>
