--- a/client/views/home.ng.html
+++ b/client/views/home.ng.html
@@ -1,4 +1,4 @@
-<div class="greeting" data-greeting-center>
-    Сімейні ігри: естафети, змагання між родинами Індивідуальний спорт: єдиноборства, біг, байдарки, теніс, йога, турнікмени, паркур та інше Танці: сальса, хіп хоп, брейк, бальні, народні, лінді хоп та інше Командний спорт: мініфутбол, стрітбол, волейбол, алтимат, регбі, квідіч та інше
+<div class="greeting content-page" data-greeting-center>
+    ВелоФранківськ - ресурс на якому зібрана вся інформація по вело інфраструктурі Івано-Франківська.
     <h2>Наші партнери</h2>
 </div>
